@@ -18,17 +18,18 @@ class EnumExporter(Exporter):
 
 
     def Export(self, codeunit, expoted_names):
-        indent = self.INDENT
-        in_indent = self.INDENT*2
-        rename = self.info.rename or self.enum.name
-        full_name = self.enum.FullName()
-        code = indent + namespaces.python + 'enum_< %s >("%s")\n' % (full_name, rename)
-        for name in self.enum.values:         
-            rename = self.info[name].rename or name
-            value_fullname = self.enum.ValueFullName(name)
-            code += in_indent + '.value("%s", %s)\n' % (rename, value_fullname)
-        code += indent + ';\n\n'
-        codeunit.Write('module', code)
+        if not self.info.exclude:
+            indent = self.INDENT
+            in_indent = self.INDENT*2
+            rename = self.info.rename or self.enum.name
+            full_name = self.enum.FullName()
+            code = indent + namespaces.python + 'enum_< %s >("%s")\n' % (full_name, rename)
+            for name in self.enum.values:         
+                rename = self.info[name].rename or name
+                value_fullname = self.enum.ValueFullName(name)
+                code += in_indent + '.value("%s", %s)\n' % (rename, value_fullname)
+            code += indent + ';\n\n'
+            codeunit.Write('module', code)
 
 
     def Unit(self):
